feat: i dont know :)

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "packageManager": "pnpm@7.12.0",
   "scripts": {
     "build": "vite build",
-    "dev": "vite --port 3333 --open",
+    "dev": "vite --port 3030",
     "lint": "eslint .",
     "typecheck": "vue-tsc --noEmit",
     "preview": "vite preview",
@@ -15,13 +15,20 @@
     "@varlet/touch-emulator": "^2.0.3",
     "@varlet/ui": "^2.0.3",
     "@vueuse/core": "^9.3.0",
+    "animejs": "^3.2.1",
     "axios": "^1.1.3",
+    "element-plus": "^2.2.19",
+    "github-markdown-css": "^5.1.0",
+    "marked": "^4.1.1",
+    "naive-ui": "^2.33.5",
     "vue": "^3.2.39",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.27.0",
     "@iconify-json/carbon": "^1.1.8",
+    "@types/animejs": "^3.1.5",
+    "@types/marked": "^4.0.7",
     "@types/node": "^18.7.23",
     "@unocss/reset": "^0.45.25",
     "@vitejs/plugin-vue": "^3.1.0",
