--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "github-markdown-css": "^5.1.0",
     "marked": "^4.1.1",
     "naive-ui": "^2.33.5",
+    "perfect-scrollbar": "^1.5.5",
     "vue": "^3.2.39",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "vue3-perfect-scrollbar": "^1.6.1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.27.0",
@@ -36,6 +38,7 @@
     "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.5.0",
     "jsdom": "^20.0.0",
+    "less": "^4.1.3",
     "pnpm": "^7.12.2",
     "postcss-px-to-viewport": "^1.1.1",
     "prettier": "^2.7.1",
