--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
+  "name": "sdu-online-hall-of-fame",
+  "description": "sdu online hall of fame",
+  "author": {
+    "name": "lnkkerst",
+    "email": "lnkkerst04@gmail.com"
+  },
   "private": true,
   "packageManager": "pnpm@7.12.0",
   "scripts": {
     "build": "vite build",
     "dev": "vite --port 3030",
     "lint": "eslint .",
+    "format": "prettier --write src",
     "typecheck": "vue-tsc --noEmit",
     "preview": "vite preview",
     "test": "vitest",
